ash-code/tui/src/app/snapshots/app__marketplace_tests__marketplace_chinese_removal.snap
---
source: ash-code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                               [— / —] [仪 表 盘 ]  
                                                                                                    
                                                                                                    
            ┌── 确 认 卸 载  ─────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │> 返 回 已 安 装 包                                                            │             
            │  web@official  ·  1.0.0 · v1                                            │             
            │  技 能  · web-guide  ·  权 限 ： 未 声 明                                       │             
            │  确 认 卸 载 整 个 包   ·  使 用 中 的 功 能 释 放 此 版 本 后 才 会 卸 载                     │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │  Enter 确 认   ·  Esc 关 闭                                                 │             
  ╭─────────└─────────────────────────────────────────────────────────────────────────┘──────────╮  
  │ > 构 建 任 何 内 容                                                                                │  
  ╰─────────────────────────────────────────────────────────────────────────────────── 自 动 模 型  ─╯
