ash-code/tui/src/app/snapshots/app__marketplace_tests__marketplace_inline_search.snap
---
source: ash-code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
─ Marketplace ──────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
   All    Skills    Plugins    MCP    Connectors    Executables    Languages    Themes              
   Localizations    Assets    Installed                                                             
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ Search Marketplace; Enter to search                                                          │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
  Guide  ·  guide@official · 1.0.0 · A bundled skill                                                
                                                                                                    
  Enter search · Esc return
