ash-code/tui/src/app/snapshots/app__marketplace_tests__marketplace_installed_versions.snap
---
source: ash-code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Marketplace ──────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   All    Skills    Plugins    MCP    Connectors    Executables          │             
            │   Languages    Themes    Localizations    Assets    Installed           │             
            │                                                                         │             
            │  Refresh installed packages  ·  Reads local installations; no catalog c │             
            │> web@official · 1.0.0  ·  installed · v1                                │             
            │  web@official · 2.0.0  ·  installed · v2                                │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │  Enter to confirm  ·  Tab/Shift+Tab to switch  ·  Esc to close          │             
  ╭─────────└─────────────────────────────────────────────────────────────────────────┘──────────╮  
  │ > Build anything                                                                             │  
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯
